--- a/razuberisamples/src/main/res/layout/item_list.xml
+++ b/razuberisamples/src/main/res/layout/item_list.xml
@@ -11,7 +11,8 @@
         android:id="@+id/tv_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textAllCaps="true"/>
 
     <TextView
         android:id="@+id/tv_text2"
