--- a/razuberisamples/src/main/res/values/colors.xml
+++ b/razuberisamples/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="primary">#009688</color>
     <color name="primary_dark">#004d40</color>
     <color name="accent">#1de9b6</color>
+    <color name="primary_text">#4A4A4A</color>
+    <color name="hint">#504A4A4A</color>
 </resources>
