--- a/razuberisamples/src/main/res/layout/c_screen.xml
+++ b/razuberisamples/src/main/res/layout/c_screen.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    android:id="@+id/cv_item_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardElevation="2dp">
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    app:cardElevation="6dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingBottom="32dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="20dp">
 
         <TextView
-            android:id="@+id/tv_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
+            android:text="@string/screen_c"
+            android:textColor="@color/primary_text"
             android:textSize="18sp"/>
 
-        <TextView
-            android:id="@+id/tv_color"
+        <Spinner
+            android:id="@+id/sp_sample"
+            android:layout_marginTop="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textSize="12sp"/>
+            android:background="@drawable/spinner_bg"
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
 
