--- a/razuberisamples/src/main/res/layout/b_screen.xml
+++ b/razuberisamples/src/main/res/layout/b_screen.xml
@@ -12,9 +12,9 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingBottom="8dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingBottom="8dp"
         android:paddingTop="20dp">
 
         <TextView
@@ -24,46 +24,20 @@
             android:textColor="@color/primary_text"
             android:textSize="18sp"/>
 
-        <RadioGroup
-            android:id="@+id/rg_sample"
+        <TextView
+            android:id="@+id/tv_random"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="22dp"
-            android:checkedButton="@+id/rb_1">
-
-            <RadioButton
-                android:id="@id/rb_1"
-                android:textSize="14sp"
-                android:textColor="@color/primary_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/option_1"/>
-
-            <RadioButton
-                android:id="@+id/rb_2"
-                android:textSize="14sp"
-                android:textColor="@color/primary_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/option_2"/>
-
-            <RadioButton
-                android:id="@+id/rb_3"
-                android:textSize="14sp"
-                android:textColor="@color/primary_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/option_3"/>
-
-        </RadioGroup>
+            android:textColor="@color/primary_text"
+            android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tv_next"
             android:layout_width="wrap_content"
-            android:layout_marginTop="22dp"
             android:layout_height="36dp"
             android:layout_gravity="right"
+            android:layout_marginTop="22dp"
             android:gravity="center_vertical"
             android:text="@string/next"
             android:textAllCaps="true"
