--- a/razuberisamples/src/main/res/values/styles.xml
+++ b/razuberisamples/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/background</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+    <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/window_background</item>
     </style>
+
+    <style name="AppTheme" parent="BaseTheme" />
 
 </resources>
